# nlp-practice

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  glitch.json  pyproject.toml
.github/workflows/: ci.yml
configs/: transformer.yaml
docker/openai/: Dockerfile
examples/cli/translation/: run_model_evaluation.py  run_model_training.py
examples/translation/: __init__.py  data_handler.py  evaluation.ipynb  evaluation.py  preprocessor.py  run_model_evaluation.py  run_model_training.py  seq2seq.py  train.py  train_dataloader.py  train_seq2seq_model.py  utils.py
examples/translation/cli/: run_model_evaluation.py  run_model_training.py
examples/translation/cli/seq2seq/: run_model_evaluation.py  run_model_training.py
examples/translation/cli/transformer/: run_model_training.py
examples/translation/notebooks/: evaluation.ipynb  execution.ipynb
examples/translation/notebooks/seq2seq/: execution.ipynb
examples/translation/seq2seq/: data_handler.py  dataloader.py  evaluation.py  preprocessor.py  run_model_evaluation.py  run_model_training.py  trainer.py
examples/translation/seq2seq/src/: data_handler.py  dataloader.py  evaluator.py  preprocessor.py  seq2seq.py  trainer.py  utils.py
llm/: main.py
llm_service/: main.py
llm_service/api/v1/: openai.py
llm_service/core/settings/: config.py
llm_service/core/utils/logger/: config.py  logger.py
nlp_practice/case/translation/: __init__.py  evaluator.py  trainer.py  utils.py
nlp_practice/case/translation/Inference/: predictor.py
nlp_practice/case/translation/data/: data_handler.py  dataloader.py  dataset.py  preprocessor.py  tokenizer.py
nlp_practice/case/translation/evalution/: evaluator.py
nlp_practice/case/translation/inference/: predictor.py
nlp_practice/case/translation/model/: decoder.py
nlp_practice/case/translation/training/: trainer.py  utils.py
nlp_practice/model/: decoder.py  embedder.py  encoder.py  transformer.py  utils.py  word2vec.py
nlp_practice/model/layers/: attention.py  decoder.py  embedder.py  encoder.py  feedforward.py  normalization.py  projection.py  skip_connection.py
nlp_practice/service/: main.py
tests/case/translation/: test_utils.py
tests/case/translation/data/: test_data_handler.py  test_dataloader.py  test_preprocessor.py
tests/case/translation/evaluation/: test_evaluator.py
tests/case/translation/inference/: test_predictor.py
tests/case/translation/training/: test_trainer.py  test_training_utils.py
tests/model/: test_attention.py  test_decoder.py  test_embedder.py  test_encoder.py  test_model_utils.py  test_transformer.py  test_word2vec.py
tests/services/core/settings/: test_config.py
