[tool.poetry]
name = "llm-service"
version = "0.0.1"
description = ""
authors = ["Joseph Wang <egpivo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
python-dotenv = "^1.0.0"
numpy = "^1.24.4"
pydantic-settings = "^2.0.3"
tenacity = "^8.2.3"
pyyaml = "^6.0.1"
torch = [
  {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-2.1.0-cp310-none-macosx_11_0_arm64.whl"},
  {markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/cpu/torch-2.1.0-cp310-none-macosx_10_9_x86_64.whl"},
  {markers = "sys_platform == 'linux'", url="https://download.pytorch.org/whl/cpu/torch-2.1.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl#sha256=8132efb782cd181cc2dcca5e58effbe4217cdb2581206ac71466d535bf778867"}
]


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.971"
pydocstyle = { extras = ["toml"], version = "^6.1.1" }
pytest = "^7.1.3"
poethepoet = "^0.15.0"
coverage = { extras = ["toml"], version = "^6.4.4" }
pre-commit = "^2.20.0"
python-dotenv = "^1.0.0"
poetry-bumpversion = "^0.3.0"


[tool.poetry_bumpversion.file."promotion_llm/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "cleo.*"
ignore_missing_imports = true
